--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -18,16 +18,24 @@
     <div class="p-3 border-t border-gray-200 flex">
       <app-theme-toggle></app-theme-toggle>
     </div>
-  <div class="p-3 text-xs flex items-center gap-3" (click)="apiState = !apiState">
-    <div>Etat de l'API :</div>
-    <div class="px-1 py-0.5 rounded bg-green-100
-		text-green-600 border border-green-600" *ngIf="apiState">
-      En Ligne
+    <div class="pl-3 text-sm text-gray-500">
+      Connecté en tant que :
+      <div class="text-gray-800 font-medium">{{ username }}</div>
     </div>
-    <div class="px-1 py-0.5 rounded bg-red-100
-		text-red-600 border border-red-600" *ngIf="!apiState">
-      Hors-Ligne
+    <div class="hover:bg-red-100 text-red-600 rounded cursor-pointer px-3 py-2 flex items-center gap-2"
+         (click)="logout()">
+       <span>Se déconnecter</span>
     </div>
-  </div>
+    <div class="p-3 text-xs flex items-center gap-3" (click)="apiState = !apiState">
+      <div>Etat de l'API :</div>
+      <div class="px-1 py-0.5 rounded bg-green-100
+      text-green-600 border border-green-600" *ngIf="apiState">
+        En Ligne
+      </div>
+      <div class="px-1 py-0.5 rounded bg-red-100
+      text-red-600 border border-red-600" *ngIf="!apiState">
+        Hors-Ligne
+      </div>
+    </div>
   </div>
 </div>
